<resources>
    <string name="app_name">FoodHelperApp</string>
    <string name="tips_button_text">TIPS</string>
    <string name="add_meal_text">ADD MEAL</string>
    <string name="weight_button_text">WEIGHT</string>
    <string name="save_text">SAVE</string>
    <string name="diet_tips_text">Websites with diet tips</string>
    <string name="weight_edit_text_text">Insert your current weight...</string>
    <string name="weight_text_view_text">Enter your current weight in kg</string>
    <string name="add_meal_text_view_text">Insert a meal you ate</string>
    <string name="water_edit_text_hint">Insert water in ml...</string>
    <string name="recipe_hint">Insert recipe name...</string>
    <string name="search_text">SEARCH</string>
    <string name="portion_hint">Insert potion amount...</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="insert_your_height">Insert your height</string>
    <string name="profile_picture">Profile picture</string>
    <string name="copy_recipe_button_text">COPY HIGHLIGHTED</string>
    <string name="new_recipe_button_text">CREATE NEW</string>
    <string name="recipe_text_view_text">Create new recipe</string>
    <string name="recipe_name_hint">Insert recipe name...</string>
    <string name="add_ingredient_button_text">ADD INGREDIENT</string>
    <string name="remove_ingredient_button_text">REMOVE INGREDIENT</string>
    <string name="add_ingredient_text">Insert ingredient details</string>
    <string name="ingredient_hint">Insert product name...</string>
    <string name="grams_hint">Insert amount of grams...</string>
    <string name="new_product_button_text">ADD NEW PRODUCT</string>
    <string name="new_product_text">Add product to database</string>
    <string name="product_name_hint">Insert product name...</string>
    <string name="producer_text">Producer</string>
    <string name="producer_hint">Insert producer name...</string>
    <string name="grams_text">Grams</string>
    <string name="calories_text">Calories</string>
    <string name="calories_hint">Insert amount of calories...</string>
    <string name="protein_txt">Protein</string>
    <string name="protein_hint">Insert amount of protein...</string>
    <string name="fat_text">Fat</string>
    <string name="fat_hint">Insert amount of fat...</string>
    <string name="carbohydrates_text">Carbohydrates</string>
    <string name="carbohydrates_hint">Insert carbohydrates...</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forwards"><![CDATA[->]]></string>
    <string name="select_date">Select date</string>
    <string name="tips_text">
        <a href="https://nutritionstripped.com/">https://nutritionstripped.com/</a> - Articles on mindset, nourishment, lifestyle and health. McKel Kooienga is the founder of Nutrition Stripped. Her work focuses on empowering others to rebalance mindsets, habits, and practices around food to mindfully nourish themselves in an easy, aligned, and enjoyable.\n
        <a href="https://www.myhdiet.com/healthnews/">https://www.myhdiet.com/healthnews/</a> - Health tips, education, diet recipes, healing stories and more. The Hallelujah Diet helps you live a healthy, vibrant life. It\'s a plant-based, clean food diet based on scientifically proven principles and research.\n
        <a href="https://therealfooddietitians.com/blog/">https://therealfooddietitians.com/blog/</a> - Features recipes for each, plus tips for meal prep efficiency. Not only are there tons of dietitian-authored recipes, but you can also opt in for customized meal plans. The Real Food Dietitians is the passion-driven product of Registered Dietitian Nutritionists who have combined their love of nutrition, health, and real food with the concepts of ease and convenience to bring you recipes that are big on flavor but short on ingredients.\n
        <a href="https://karalydon.com/blog/">https://karalydon.com/blog/</a> - Covers articles on health and wellness, intuitive eating, recipes, travel, yoga and mindfulness. Kara is a registered dietitian and blogger on a mission to inspire you to find a joyful love of food and peaceful balance in life.\n
        <a href="https://diettogo.com/blog">https://diettogo.com/blog</a> - Covers articles on nutrition science, psychology, weight loss, recipes, lifestyle and wellness, kitchen tips, healthy snack ideas, exercise tips and more. Diet-to-Go is a meal delivery company focused on making healthy eating both easy and affordable. Our goal is to change perceptions of what it means to eat healthy and help our customers achieve and maintain a healthy weight for life.</string>
    <string name="name_hint">Insert your name...</string>
    <string name="water_edit_text_text">Enter your current water demand</string>
    <string name="remove_meal_text">REMOVE MEAL</string>

</resources>