<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <TextView
        android:id="@+id/newProductTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_product_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/product_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newProductTextView"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/producerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/producer_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameEditText" />

    <EditText
        android:id="@+id/producerEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/producer_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/producerTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/gramsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/grams_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/producerTextView" />

    <EditText
        android:id="@+id/gramsProductEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/grams_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/gramsTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/caloriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/calories_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gramsTextView" />

    <EditText
        android:id="@+id/caloriesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/calories_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/caloriesTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/proteinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/protein_txt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesTextView" />

    <EditText
        android:id="@+id/proteinEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/protein_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/proteinTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/fat_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteinTextView" />

    <EditText
        android:id="@+id/fatEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/fat_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/fatTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/carbohydratesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/carbohydrates_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fatTextView" />

    <EditText
        android:id="@+id/carbohydratesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/carbohydrates_hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/carbohydratesTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addProductButton"
        android:layout_width="248dp"
        android:layout_height="78dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="goToIngredientActivity"
        android:text="@string/save_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>