<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <TextView
        android:id="@+id/recipeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/recipe_text_view_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recipeNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/recipe_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeTextView"
        android:importantForAutofill="no" />

    <ScrollView
        android:id="@+id/recipeScrollView"
        android:layout_width="362dp"
        android:layout_height="402dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeNameEditText">

        <TableLayout
            android:id="@+id/ingredientTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <Button
        android:id="@+id/addIngredientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_light"

        android:onClick="goToIngredientActivity"
        android:text="@string/add_ingredient_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeScrollView" />

    <Button
        android:id="@+id/removeIngredientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="deleteIngredient"
        android:text="@string/remove_ingredient_button_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/addIngredientButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/saveRecipeButton"
        android:layout_width="347dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="goToMealActivity"
        android:text="@string/save_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIngredientButton" />
</androidx.constraintlayout.widget.ConstraintLayout>