<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightActivity">

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="246dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/weight_edit_text_text"
        android:importantForAutofill="no"
        android:inputType="numberSigned|textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView" />

    <Button
        android:id="@+id/weightSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="saveWeight"
        android:text="@string/save_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weightEditText" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/weight_text_view_text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>