<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="goToProfileActivity"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="237dp"
        android:layout_height="75dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="selectDate"
        android:text="07-09-2022"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="36dp" />

    <Button
        android:id="@+id/addFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="goToMealActivity"
        android:text="@string/add_meal_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/weightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="goToWeightActivity"
        android:text="@string/weight_button_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/addFoodButton"
        app:layout_constraintStart_toEndOf="@+id/addFoodButton" />

    <Button
        android:id="@+id/tipsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="goToTipActivity"
        android:text="@string/tips_button_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/weightButton" />

    <ScrollView
        android:layout_width="336dp"
        android:layout_height="567dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>