<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Your Name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/insert_your_height"
        android:importantForAutofill="no"
        android:inputType="numberSigned|textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <Button
        android:id="@+id/saveHeightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="saveHeight"
        android:text="@string/save_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heightEditText"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText"
        app:layout_constraintVertical_bias="0.522">
        <com.anychart.AnyChartView
            android:id="@+id/chartWeight"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <com.anychart.AnyChartView
            android:id="@+id/chartBMI"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>